--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">bus-mj</string>
-    <string name="title_activity_main">bus-mj</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">bus nakay</string>
+    <string name="title_activity_main">bus nakay</string>
+    <string name="package_name">io.ionic.bus-nakay</string>
+    <string name="custom_url_scheme">io.ionic.bus-nakay</string>
 </resources>
